# TodoList-API

./: .coverage  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
fastapiproj/: app.py  settings.py
fastapiproj/config/: database.py  settings.py
fastapiproj/config/security/: security.py
fastapiproj/models/: model.py
fastapiproj/routers/: adm_routes.py  auth.py  todo.py  users.py  welcome.py
fastapiproj/schema/: schema.py  schemaDto.py  todo_schema.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_c2e35f141502d854_schemaDto_py.html  z_c2e35f141502d854_schema_py.html  z_d3e259317eb52b21___init___py.html  z_d3e259317eb52b21_app_py.html
migrations/: env.py
migrations/versions/: 6114a33b29a1_create_users_table.py  91b1128816c1_create_users_table.py  c61930e64cf1_create_users_table.py  e407751f948a_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py
